XMLtoCSV/objects/unpackaged/objects/Multichannel_Activity_Line_vod__c.object
<CustomObject>
    <description>Captures detailed information about what occurred during an interaction.</description>
    <fields>
        <fullName>CLM_Presentation_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Specifies the CLM Presentation that the Key Message is a part of</description>
        <label>CLM Presentation</label>
        <referenceTo>Clm_Presentation_vod__c</referenceTo>
        <relationshipLabel>Multichannel Activity Lines</relationshipLabel>
        <relationshipName>Multichannel_Activity_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates which Call record the activity line is associated with</description>
        <label>Call</label>
        <referenceTo>Call2_vod__c</referenceTo>
        <relationshipLabel>Multichannel Activity Lines</relationshipLabel>
        <relationshipName>Multichannel_Activity_Lines_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Custom_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes if the record was written natively by the system or through custom code utilizing the JavaScript Library.</description>
        <label>Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DateTime_vod__c</fullName>
        <description>Date time of the event occurence</description>
        <label>DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Debug_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the debug parameter was set to true</description>
        <label>Debug?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Detail_Group_VExternal_Id_vod__c</fullName>
        <description>Stamped Detail Group VExternal Id</description>
        <label>Detail Group VExternal Id</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detail_Group_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Detail group associated to the Multichannel Content Asset</description>
        <label>Detail Group</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Multichannel Activity Lines (Detail Group)</relationshipLabel>
        <relationshipName>Multichannel_Activity_Lines_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Duration_vod__c</fullName>
        <description>Duration in seconds.</description>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Entity_Reference_KM_ID_vod__c</fullName>
        <description>For Internal Use Only. Utilized to maintain relationship to Key Message during sync.</description>
        <label>Entity Reference KM ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Subtype_vod__c</fullName>
        <description>Details of the event.</description>
        <label>Event Subtype</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Type_vod__c</fullName>
        <description>Type of event which is being tracked</description>
        <label>Event Type</label>
        <picklist>
            <picklistValues>
                <fullName>Clickstream_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chat_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slide_View_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Key_Message_VExternal_Id_vod__c</fullName>
        <description>Stamped Key Message VExternal ID</description>
        <label>Key Message VExternal Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Message_Version_vod__c</fullName>
        <description>Version of the Key Message</description>
        <label>Key Message Version</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Message_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates which Key Message record the activity line is associated with</description>
        <label>Key Message</label>
        <referenceTo>Key_Message_vod__c</referenceTo>
        <relationshipLabel>Multichannel Activity Lines</relationshipLabel>
        <relationshipName>Multichannel_Activity_Lines_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Medical_Event_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates which Medical Event record the activity is associated with.</description>
        <label>Medical Event</label>
        <referenceTo>Medical_Event_vod__c</referenceTo>
        <relationshipLabel>Multichannel Activity Lines</relationshipLabel>
        <relationshipName>Multichannel_Activity_Lines_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>System field used by mobile products.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Multichannel_Activity_vod__c</fullName>
        <description>Parent Multichannel Activity</description>
        <label>Multichannel Activity</label>
        <referenceTo>Multichannel_Activity_vod__c</referenceTo>
        <relationshipLabel>Multichannel Activity Lines</relationshipLabel>
        <relationshipName>Multichannel_Activity_Lines_vod</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Multichannel_Content_Asset_Id_vod__c</fullName>
        <description>Stamped Multichannel Content Asset VExternal ID</description>
        <label>Asset VExternal ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multichannel_Content_Asset_Version_vod__c</fullName>
        <description>Stamped Multichannel Content Asset Version</description>
        <label>Asset Version</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multichannel_Content_Asset_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates which Multichannel Content Asset record the activity line is associated with</description>
        <label>Multichannel Content Asset</label>
        <referenceTo>Multichannel_Content_Asset_vod__c</referenceTo>
        <relationshipLabel>Multichannel Activity Lines</relationshipLabel>
        <relationshipName>Multichannel_Activity_Lines_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Multichannel_Content_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates which Multichannel Content record the activity line is associated with</description>
        <label>Multichannel Content</label>
        <referenceTo>Multichannel_Content_vod__c</referenceTo>
        <relationshipLabel>Multichannel Activity Lines</relationshipLabel>
        <relationshipName>Multichannel_Activity_Lines_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Page_List_vod__c</fullName>
        <description>Comma delimited list of pages viewed</description>
        <label>Page List</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_VExternal_Id_vod__c</fullName>
        <description>Stamped Product VExternal Id</description>
        <label>Product VExternal Id</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product associated to the Multichannel Content Asset</description>
        <label>Product</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Multichannel Activity Lines</relationshipLabel>
        <relationshipName>Multichannel_Activity_Lines1_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reaction_vod__c</fullName>
        <description>Picklist of reaction to the message.</description>
        <label>Reaction</label>
        <picklist>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negative</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name_vod__c</fullName>
        <description>Record Type DeveloperName of the record. Field is referenced in trigger.</description>
        <label>Record Type Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment_vod__c</fullName>
        <description>Holds the segment of the Account to which this Call Key Message was delivered</description>
        <label>Segment</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent_Email_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates which Sent Email record the activity line is associated with</description>
        <label>Sent Email</label>
        <referenceTo>Sent_Email_vod__c</referenceTo>
        <relationshipLabel>Multichannel Activity Lines</relationshipLabel>
        <relationshipName>Multichannel_Activity_Lines_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Doc_Pages_vod__c</fullName>
        <description>Total # of pages in the document</description>
        <label>Total Pages in Document</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Pages_Viewed_vod__c</fullName>
        <description>Total count of pages viewed</description>
        <label>Total Pages Viewed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Input_vod__c</fullName>
        <description>User inputted text</description>
        <label>User Input</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VExternal_Id_vod__c</fullName>
        <description>External Id used by Veeva CRM</description>
        <externalId>true</externalId>
        <label>Veeva External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Video_Last_Viewed_Time_vod__c</fullName>
        <description>Time in seconds of the furthest viewed frame on the video.</description>
        <label>Last Viewed Time on Video</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Video_Length_vod__c</fullName>
        <description>Time in seconds of the length of the video</description>
        <label>Length of Video</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Video_Total_Time_Spent_vod__c</fullName>
        <description>Time in seconds where the video was playing.</description>
        <label>Total Time spent watching Video</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>View_Order_vod__c</fullName>
        <description>Order that the Asset was viewed by the end user</description>
        <label>View Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Multichannel Activity Line</label>
    <nameField>
        <displayFormat>MAL-{000000000}</displayFormat>
        <label>Multichannel Activity Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Multichannel Activity Lines</pluralLabel>
    <recordTypes>
        <fullName>CLM_vod</fullName>
        <active>true</active>
        <description>Used for records created by CLM</description>
        <label>CLM_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cobrowse_vod</fullName>
        <active>true</active>
        <description>Used for records created by CoBrowse</description>
        <label>Cobrowse_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Engage_vod</fullName>
        <active>true</active>
        <description>Used for records created via Engage</description>
        <label>Engage_vod</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>